force-app/main/default/objects/Code_Library__c/Code_Library__c.object-meta.xml
<CustomObject>
    <description>To store the codes used for case and work order closure</description>
    <label>Code Library</label>
    <nameField>
        <label>Code Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Code Library</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>