force-app/main/default/objects/Code_Library__c/fields/Code_Description__c.field-meta.xml
<CustomField>
    <fullName>Code_Description__c</fullName>
    <description>To detail out the description of a code</description>
    <label>Code Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>