force-app/main/default/objects/Code_Library__c/fields/Code_Number__c.field-meta.xml
<CustomField>
    <fullName>Code_Number__c</fullName>
    <description>Auto Number generated to create Code ID</description>
    <displayFormat>{00000}</displayFormat>
    <label>Code Number</label>
    <type>AutoNumber</type>
</CustomField>