force-app/main/default/objects/Code_Library__c/fields/German_Code_Title__c.field-meta.xml
<CustomField>
    <fullName>German_Code_Title__c</fullName>
    <businessOwnerGroup>Service_Schema_Owners_FS</businessOwnerGroup>
    <description>This field will be used to store the German code title.</description>
    <label>German Code Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>