force-app/main/default/objects/Code_Library__c/fields/Parent_Code__c.field-meta.xml
<CustomField>
    <fullName>Parent_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associates record to other codes</description>
    <label>Parent Code</label>
    <referenceTo>Code_Library__c</referenceTo>
    <relationshipLabel>Code Library</relationshipLabel>
    <relationshipName>Code_Library</relationshipName>
    <type>Lookup</type>
</CustomField>