force-app/main/default/objects/Code_Library__c/fields/Service_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Product_Type__c</fullName>
    <description>To select the service product. Values are taken from the service product type field on Product. 
Entered Manually.</description>
    <label>Service Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consumable</fullName>
            </value>
            <value>
                <fullName>Tool</fullName>
            </value>
            <value>
                <fullName>Instrument</fullName>
            </value>
            <value>
                <fullName>Spare</fullName>
            </value>
            <value>
                <fullName>NONFRU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>