force-app/main/default/objects/Code_Library__c/validationRules/CheckCodeTitleAndCodeType.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckCodeTitleAndCodeType</fullName>
    <active>true</active>
    <description>Check if the code title and code type are populated for Code</description>
    <errorConditionFormula>OR(
    ISBLANK( Name ),
    ISBLANK(TEXT( Code_Type__c ))
)</errorConditionFormula>
    <errorMessage>Please populate Code Title and Code Type.</errorMessage>
</ValidationRule>