force-app/main/default/objects/Code_Library__c/validationRules/CheckCodeTypeOnParentCode.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckCodeTypeOnParentCode</fullName>
    <active>true</active>
    <description>Check if the code type on parent code is not null, then the code type of the child code should be same as code type of the parent code.</description>
    <errorConditionFormula>AND( 
    NOT(ISBLANK(TEXT(Parent_Code__r.Code_Type__c))), 
    TEXT(Code_Type__c) &lt;&gt; 
    TEXT(Parent_Code__r.Code_Type__c) 
)</errorConditionFormula>
    <errorMessage>Please select the Parent Code with Same Code Type.</errorMessage>
</ValidationRule>