force-app/main/default/objects/Code_Library__c/validationRules/CheckProductCategoryonParentCode.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckProductCategoryonParentCode</fullName>
    <active>true</active>
    <description>Check if the product category on parent code is not null, then the product category of the child code should be same as product category of the parent code.</description>
    <errorConditionFormula>AND(
     NOT(ISBLANK(TEXT(Parent_Code__r.Product_Category__c))),
     TEXT(Product_Category__c) &lt;&gt; TEXT(Parent_Code__r.Product_Category__c)
)</errorConditionFormula>
    <errorMessage>Please select the Parent Code with Same Product Category.</errorMessage>
</ValidationRule>