force-app/main/default/objects/Code_Library__c/validationRules/CheckTranslationCodeTitle.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckTranslationCodeTitle</fullName>
    <active>true</active>
    <description>If user has permission set SS_Manage_Code_Library  and If code type is either analysis or resolution then user should not able to save/create the record unless all the 8 translation code title has data in those fields.</description>
    <errorConditionFormula>AND(
 
$Permission.SS_Manage_Code_Library_custom_permission, 
NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),

 
OR(
 ISPICKVAL(Code_Type__c ,&quot;Analysis&quot;), 
 ISPICKVAL(Code_Type__c ,&quot;Resolution&quot;)
 ), 

OR(
     ISBLANK(Name),
     ISBLANK(Chinese_Code_Title__c),
     ISBLANK(Japanese_Code_Title__c),
     ISBLANK(German_Code_Title__c),
     ISBLANK(Spanish_Code_Title__c),
     ISBLANK(Korea_Code_Title__c) ,
     ISBLANK(Portuguese_Code_Title__c),
     ISBLANK(French_Code_Title__c),
     ISBLANK(Italian_Code_Title__c)  
    )
)</errorConditionFormula>
    <errorMessage>Attempting to save an associated code without all the required fields.  Ensure that Code Title and Code Type are populated; additionally ensure all language title codes are populated for Analysis and Resolution codes.</errorMessage>
</ValidationRule>