force-app/main/default/objects/Code_Library__c/listViews/All_Inactive_Active.listView-meta.xml
<ListView>
    <fullName>All_Inactive_Active</fullName>
    <columns>NAME</columns>
    <columns>Code_Description__c</columns>
    <columns>Code_ID__c</columns>
    <columns>Code_Type__c</columns>
    <columns>Case_Sub_Type__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Inactive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All (Inactive / Active)</label>
</ListView>