force-app/main/default/objects/Code_Library__c/listViews/Resolution.listView-meta.xml
<ListView>
    <fullName>Resolution</fullName>
    <columns>NAME</columns>
    <columns>Code_Description__c</columns>
    <columns>Code_ID__c</columns>
    <columns>Code_Type__c</columns>
    <columns>Case_Sub_Type__c</columns>
    <columns>Case_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Code_Type__c</field>
        <operation>equals</operation>
        <value>Resolution</value>
    </filters>
    <filters>
        <field>Inactive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Resolution</label>
</ListView>