force-app/main/default/objects/Code_Library__c/listViews/Verification.listView-meta.xml
<ListView>
    <fullName>Verification</fullName>
    <columns>NAME</columns>
    <columns>Code_Description__c</columns>
    <columns>Code_ID__c</columns>
    <columns>Code_Type__c</columns>
    <columns>Case_Sub_Type__c</columns>
    <columns>Case_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Code_Type__c</field>
        <operation>equals</operation>
        <value>Verification</value>
    </filters>
    <filters>
        <field>Inactive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Verification</label>
</ListView>